--- a/gdsfactory/sky130hd/a2o_iu/macro.cfg
+++ b/gdsfactory/sky130hd/a2o_iu/macro.cfg
@@ -10,11 +10,11 @@ bht2.bht0                  R0   200    1400
 iuq_btb0.btb0              R0   200    2000
 
 # 400x1400
-iuq_cpl                    R0   1000   1000
+iuq_cpl_top0.iuq_cpl0.iuq_cpl_arr   R0   500    1000
 
 # 500x1700
-iuq_ifetch0.iuq_ic0.iuq_ic_ierat0.ierat_cam     R0    500    500
+iuq_ifetch0.iuq_ic0.iuq_ic_ierat0.ierat_cam     R0   1300   2500
 # 400x1000
-iuq_ifetch0.iuq_ic0.iuq_ic_dir0.idir            R0   2000    500
+iuq_ifetch0.iuq_ic0.iuq_ic_dir0.idir            R0   2000   3200
 # 400x3000
-iuq_ifetch0.iuq_ic0.iuq_ic_dir0.idata           R0   2800    250
+iuq_ifetch0.iuq_ic0.iuq_ic_dir0.idata           R0   2800   1200
